IndexBuildsCoordinator::_buildIndexTwoPhase() crashes after collection scan is interrupted

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-11-18
    • 17
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When the collection scan phase is interrupted after releasing its locks, the exception handing in _buildIndexTwoPhase() should re-throw the exception rather than proceed to check the current replication state. We need the RSTL, which is one of the locks released, in order to check the replication state. This may lead to the server crashing on the Locker::isRSTLLocked() invariant

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: