SERVER-44544 IndexBuildsCoordinator::_buildIndexTwoPhase() rethrows interrupton exceptions without waiting for abort